front-end/src/components/UI/Card/Card.module.css
.Card {
    background-color: white;
    border-radius: 0.5rem;
    box-shadow: 0 5px 10px -4px rgba(0, 0, 0, 0.25);
    display: flex;
    flex-direction: column;
    overflow: hidden;
    height: 340px;
    width: 95%;
    margin: 10px 0;
    max-width: 600px;
    position: relative;
    top: 30px;
    opacity: 0;
    animation: PhaseIn 0.6s forwards;
}

.InspectCard {
  background-color: white;
  border-radius: 0.5rem;
  box-shadow: 0 5px 10px -4px rgba(0, 0, 0, 0.25);
  display: flex;
  flex-direction: column;
  overflow: hidden;
  min-height: 340px;
  width: 95%;
  margin: 10px 0;
  max-width: 600px;
  position: relative;
  top: 30px;
  opacity: 0;
  animation: PhaseIn 0.6s forwards;
}

@keyframes PhaseIn {
  from {
    top: 15px;
    opacity: 0;
  }
  to {
    top: 0px;
    opacity: 1;
  }
}

.CardTitle {
  margin: 0;
  color: rgb(71, 71, 71);
  text-align: center;
  user-select: none;
  cursor: pointer;
}

.CardTitle:hover {
  color: rgb(49, 49, 49);
}

.CardHeader {
  background-color: transparent;
  width: 100%;
  min-height: 45px;
  box-shadow: 0 0 5px 0.5px rgb(235, 235, 235);
  border-bottom: 1px solid rgb(235, 235, 235);
  display: flex;
  align-items: center;
  justify-content: center;
}

.ListBox {
  max-width: 100%;
  min-height: calc(100% - 90px);
  display: flex;
  align-items: center;
  /* overflow: auto; */
}

.ListTable {
  margin: auto;
  font-weight: 500;
  max-width: 90%;
  color: rgb(73, 73, 73);
}

.ExerciseListItem {
  margin: 7px;
  font-size: 1.2rem;
  text-align: left;
  max-width: 40vw;
  letter-spacing: -.5px;
  overflow: hidden;
}

.CardFooter {
  background-color: white;
  width: 100%;
  min-height: 45px;
  position: absolute;
  bottom: 0;
  box-shadow: 0 0 5px 0.5px rgb(235, 235, 235);
  z-index: 2;
}

.LikesNumber {
  position: absolute;
  right: 54px;
  bottom: 10px;
  margin: 0;
  color: rgb(73, 73, 73);
  font-size: 1.2rem;
}

.LikeButton {
  position: absolute;
  right: 5px;
  bottom: 0px;
  border: none;
  background-color: transparent;
  outline: none;
  color: rgb(75, 75, 75);
  cursor: pointer;
}

.LikeButton:active {
  animation: shake 0.5s;
}

.FadeOut {
  width: 100%;
  min-height: 45px;
  position: absolute;
  bottom: 0;
  box-shadow: 0 0 50px 20px white;
  z-index: 1;
}

.TimeAgo {
  display: inline;
  position: absolute;
  left: 10px;
  top: 11px;
  color: rgb(73, 73, 73);
  font-weight: 500;
  font-size: .9rem;
}

@media (max-width: 500px) {
  .TimeAgo {
    top: 12px;
    font-size: .8rem;
  }
  .Card {
    font-size: -.1rem;
  }
}

@media (max-width: 400px) {
  .TimeAgo {
    top: 13px;
    font-size: .7rem;
  }
}

@media (max-width: 300px) {
  .TimeAgo {
    top: 14px;
    font-size: .6rem;
  }
}

@keyframes shake {
  0% { transform: rotate(10deg); }
  20% { transform: rotate(-10deg); }
  40% { transform: rotate(10deg); }
  60% { transform: rotate(-10deg); }
  80% { transform: rotate(10deg); }
  100% { transform: rotate(-10deg); }
}

@media (min-width: 900px) {
    .Card {
      width: 45%;
    }
    .InspectCard {
      width: 45%;
    }
}
  
@media (min-width: 1400px) {
    .Card {
      width: 31%;
    }
    .InspectCard {
      width: 31%;
    }
}



@media (max-width: 1500px) and (min-width: 1400px) {
  .ExerciseListItem {
    font-size: calc(1rem + .2vw);
    letter-spacing: calc(-1.1px + .05vw);
  }
}

@media (max-width: 1399px) and (min-width: 900px) {
  .ExerciseListItem {
    font-size: calc(.9rem + .3vw);
    letter-spacing: calc(-1.4px + .1vw);
  }
}

@media (max-width: 899px) and (min-width: 641px) {
  .ExerciseListItem {
    font-size: 1.4;
    letter-spacing: -.5px;
  }
}

@media (max-width: 640px) {
  .ExerciseListItem {
    font-size: calc(.8rem + 1.4vw);
  }
}

@media (min-width: 900px) {
  .ExerciseListItem {
    max-width: 200px;
  }
}

